Update kitteh name gen.html

--- a/kitteh name gen.html
+++ b/kitteh name gen.html
@@ -46,7 +46,16 @@
 <p class="p1"><span class="Apple-converted-space">        </span>];</p>
 <p class="p2"><br></p>
 <p class="p1"><span class="Apple-converted-space">        </span>const nouns = [</p>
-<p class="p1"><span class="Apple-converted-space">            </span>"Whiskers", "Paws", "Meowster", "Catastrophe", "Furball", "KittyPurry",</p>
+<p class="p1"><span class="Apple-converted-space">            </span>"fattus cattus", "fattius cattius", "kittius cattius the fattius", 
+    "catter","fatter","floof", "kitter", "kitteh", "bisse", "pspspspspsps", 
+    "babaghanoush", "fat", "cat", "O Allah the Almighty (Allahu Allah)", "Tuna",
+    "Protect me and guide me (Allahu Allah)", "chili", "filfil", 
+    "fattius cattius the rattius","sillius soddus",  "naughtius maximus", 
+    "sussus amogus", "el ratata", "katatouille","oh noo, our bowl, its broken",
+    "tummer", "thummyas gefferson", "tummy cat", "tumtum", "tummy", "tummius kitter",
+    "tummius cattius", "kat", "kitkat", "kitterkat", "kitter catter", "sonic",
+    "crash bandicoot", "glass bandicoot", "frozone on hardwood", 
+    "suspiscious moose", "404 kitter not found",</p>
 <p class="p1"><span class="Apple-converted-space">            </span>"Mittens", "Fuzzinator", "Catzilla", "Purrmonster", "ScratchMachine",</p>
 <p class="p1"><span class="Apple-converted-space">            </span>"Clawdia", "Napster", "Purrfection", "Furrlicity", "KittenKaboodle",</p>
 <p class="p1"><span class="Apple-converted-space">            </span>"Pawtastic", "Mewsical", "Sphinxter", "Catsanova", "KittyMcFluff",</p>
