--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
 <body>
     <h1>Welcome to My Awesome Website!</h1>
     <p>Click the link below to visit the Kitten Name Generator:</p>
-    <p><a href="kitten_name_generator.html">Go to Kitten Name Generator</a></p>
+    <p><a href="kitteh_name_gen.html">Go to Kitten Name Generator</a></p>
 </body>
 </html>
