--- a/kitteh_name_gen.html
+++ b/kitteh_name_gen.html
@@ -8,7 +8,26 @@
         function generateKittenName() {
             const adjectives = ["Chonky", "Fatty", "Wobbly", "Fluffy", "Cuddly", "Furry", "Tiny", "Sassy",
             "Feisty", "Whiskery", "Squeaky", "Scratchy", "Snoozy", "Pouncy", "Zoomy",
-            "Jumpy", "Purrfect", "Snuggly", "Bouncy", "Clumsy", "Sleepy", "Spotty", "Fatter"];
+            "Jumpy", "Purrfect", "Snuggly", "Bouncy", "Clumsy", "Sleepy", "Spotty", "Fatter", "Chonkster", 
+            "Speedykitz", "Sneakiez", "Lazytail", "Derpster", "Smoothwhiskerz", "Cutenose",
+            "Furryfloof", "Zoomiespawz", "Trickster", "Snoozyhead", "Clumsykitz", "Slickfur", "Meowtastic",
+            "Rollypolly", "Swiftstripe", "Prankiepawz", "Couchloafer", "Nogginfluff", "Slywhiskers",
+            "Charmtail", "Flabbybelly", "Lightningpaws", "Mischiefmew", "Lazynapper", "Dizzywhiskerz",
+            "Silkypurr", "Hugabug", "Wobbletum", "Swiftstep", "Rascalmew", "Napmaster", "Bumblepaws",
+            "Greasedfur", "Heartmeltr", "Chunkykitty", "Dashin'floof", "Naughtytail", "Snoozefest",
+            "Confuzzled", "Smoothpouncer", "Softiepaws", "Bigbelly", "Speedymew", "Trickymittens",
+            "Sleepyface", "Sillysnout", "Cleverwhiskerz", "Awwdorable", "Pudgepaws", "Velocikitty",
+            "Jokster", "Naptastic", "Lollygagfur", "Charmington", "Squishbean", "Rocketmew",
+            "Shenaniganpaw", "Lazybones", "Dumbellmew", "Suavepurr", "Purrfection", "Tubbytummy",
+            "Hurrikitty", "Hoodwinker", "Drowsemeister", "Puzzlemew", "Sleekytail", "Sweetwhiskers",
+            "Pudgypounce", "Pouncealot", "Kittenpants", "Dozerfloof", "Numskull", "Gracefulpaws",
+            "Snugglemew", "Fattyfur", "Rapidpaw", "Gigglesnort", "Slumbertail", "Befuddled", "Stealthpurr",
+            "Huggable", "Bouncybelly", "Quickmittens", "Mischieftail", "Lazymitts", "Goofballkit",
+            "Cunningpaw", "Luvbug", "Tummywiggler", "Supersonic", "Frolicwhiskers", "Sleepywhiskers",
+            "Scatteredbrain", "Slickpaws", "Snugglepurr", "Plumpster", "Sprintypaws", "Jestermew",
+            "Dozykit", "Dunderhead", "Slinkytail", "Warmheart", "Heftykitz", "Fleetfoot", "Sneakywhiskerz",
+            "Pillowhogger", "Confuddled", "Swiftpounce", "Purrballs", "Snugglebum", "Tubbypaws"
+        ];
             const customs = ["fattus cattus", "fattius cattius", "kittius cattius the fattius", 
     "catter","fatter","floof", "kitter", "kitteh", "bisse", "pspspspspsps", 
     "babaghanoush", "fat", "cat", "O Allah the Almighty (Allahu Allah)", "Tuna",
@@ -18,7 +37,7 @@
     "tummer", "thummyas gefferson", "tummy cat", "tumtum", "tummy", "tummius kitter",
     "tummius cattius", "kat", "kitkat", "kitterkat", "kitter catter", "sonic",
     "crash bandicoot", "glass bandicoot", "frozone on hardwood", 
-    "suspiscious moose", "404 kitter not found"];
+    "suspiscious moose", "404 kitter not found", ];
             
             const randomAdjective = adjectives[Math.floor(Math.random() * adjectives.length)];
             const randomName = customs[Math.floor(Math.random() * customs.length)];
