--- a/kitteh_name_gen.html
+++ b/kitteh_name_gen.html
@@ -37,7 +37,15 @@
     "tummer", "thummyas gefferson", "tummy cat", "tumtum", "tummy", "tummius kitter",
     "tummius cattius", "kat", "kitkat", "kitterkat", "kitter catter", "sonic",
     "crash bandicoot", "glass bandicoot", "frozone on hardwood", 
-    "suspiscious moose", "404 kitter not found", ];
+    "suspiscious moose", "404 kitter not found", "ratacatouille", "chonkpuccino", "meowzerspeed", "nightwhiskerz", "jellopaws", "catffeine",
+        "espressoclaw", "sushinibbler", "tofupounce", "meowzarella", "remywhiskers", "fatmewgli",
+        "supersonicpurr", "twilightmew", "jellybelly", "zoomiebean", "cappuccikitty", "nekotokyo",
+        "beanfu", "linguinifur", "ratamew", "chunkyristretto", "demonpaws", "lunarwhiskers",
+        "wigglewobbles", "cafekitte", "kawaiikat", "silkytofu", "pizzapurrs", "catouillememe",
+        "plumpuccino", "speedmeowster", "shadowmew", "jigglytail", "meowaccino", "catzilla",
+        "tofunapper", "whiskersghetti", "whiskrat", "fluffalatte", "sprintycat", "nightcrawler",
+        "gelatokitty", "kopicat", "nipponcat", "tofuwhiskers", "raviolipaws", "meowtatouille",
+        "fatamericano", "zippymeow"];
             
             const randomAdjective = adjectives[Math.floor(Math.random() * adjectives.length)];
             const randomName = customs[Math.floor(Math.random() * customs.length)];
